tests/golden/compile-fail/parse_missing_brace.rua
fn main() {
    let value = 1;
