tests/golden/compile-fail/parse_missing_brace.diag.golden
<golden>/compile-fail/parse_missing_brace.rua:3: parse error: expected `}`, found `<eof>`